<resources>
    <string name="app_name" translatable="false">Odyssey</string>
    <string name="login">Войти в аккаунт</string>
    <string name="telephone_number_linked_to_odyssey_id">По номеру телефона привязанному к Odyssey ID</string>
    <string name="enter">Войти</string>
    <string name="telephone">Телефон</string>
    <string name="phone_number_format" translatable="false">+7 ([000]) [000] [00] [00]</string>
    <string name="phone_number_placeholder" translatable="false">+7 (</string>
    <string name="enter_phone_number_fully">Введите номер телефона полностью</string>
    <string name="terms_of_agreement">Пользовательское соглашение</string>
    <string name="accept_terms_of_agreement">Принять соглашение</string>
    <string name="error_happened">Произошла ошибка</string>
    <string name="phone_number_error_content">При попытке войти в аккаунт, произошла непредвиденная ошибка. Пожалуйста, обратитесь в службу поддержки.</string>
    <string name="contact_support_btn">Обратиться в поддержку</string>
    <string name="try_again">Попробовать снова</string>
    <string name="account_deactivated">Аккаунт деактивирован</string>
    <string name="account_deactivated_content">Уважаемый %1$s, Ваш аккаунт был деактивирован Вашим работодателем. Если у Вас есть вопросы обратитесь в службу поддержки.</string>
    <string name="call">Позвонить</string>
    <string name="seven_days_24_hours">круглосуточно, без выходных</string>
    <string name="write_in_whatsapp">Написать в WhatsApp</string>
    <string name="write_in_telegram">Написать в Telegram</string>
    <string name="operator_online">оператор онлайн</string>
    <string name="cancel">Отмена</string>
    <string name="enter_code">Введите код</string>
    <string name="code_was_sent_to_number">На номер %1$s отправлено SMS с кодом авторизации</string>
    <string name="zero" translatable="false">0</string>
    <string name="resend_sms">Выслать SMS повторно</string>
    <string name="resend_sms_with_seconds">Переотправить SMS: %1$d сек</string>
    <string name="change_number">Изменить номер</string>
    <string name="contact_support_content">К вам не поступил SMS-код? Свяжитесь с нашей службой поддержки.</string>
    <string name="contact_support">Обратитесь к службе поддержки</string>
    <string name="back">Назад</string>
    <string name="fill_all_empty_fields">Заполните все поля</string>
    <string name="sms_retrieve_broadcast_receiver_timeout">Время ожидания чтение смс кода истекло</string>
    <string name="too_many_request_message">Количество запросов в минуту превысила норму, повторите попытку через %1$d секунд</string>
    <string name="not_find_telephone_number">Номер не найден.\n Войти по ИИН</string>
    <string name="enter_your_iin">Номер %1$s не найден. Пожалуйста, введите Ваш ИИН.</string>
    <string name="login_with_iin">Войти по ИИН</string>
    <string name="iin">ИИН</string>
    <string name="iin_placeholder" translatable="false">_ _ _ _ _ _ _ _ _ _ _ _</string>
    <string name="enter_iin_fully">Введите ИИН полностью</string>
    <string name="add_number">Добавить номер</string>
    <string name="found_employee_by_id">С указанным ИИН найден сотрудник</string>
    <string name="employee_name_placeholder" translatable="false">Байжанов Нуржан Байжанулы</string>
    <string name="employee_position_placeholder" translatable="false">Старший бригадир</string>
    <string name="add_phone_number">Добавить номер телефона</string>
    <string name="change_phone_number">Изменить номер телефона</string>
    <string name="do_you_want_to_change_iin">Для указаного ИИН уже закреплен номер телефона. Желаете его изменить ?</string>
    <string name="change_iin">Изменить ИИН</string>
    <string name="phone_number_added" translatable="false">Номер успешно добавлен</string>
    <string name="phone_number_added_content" translatable="false">По указаному ИИН успешно добавлен номер телефона: +7 701 399 35 38. Вы сможете войти в аккаунт используя этот номер.</string>
    <string name="go_to_login_page">Перейти на страницу входа</string>
    <string name="employee_not_found">Сотрудник не найден</string>
    <string name="employee_not_found_with_contents">Сотрудник с ИИН: %1$s не найден. Внимательно проверьте Ваши данные и попробуйте снова.</string>
    <string name="application_sent">Заявка отправлена</string>
    <string name="application_sent_content">Заявка на изменение номера телефона на %1$s успешно отправлена. Обработка займет до 30 минут. После подтверждения Вы получите уведомление на Ваш телефон.</string>
    <string name="close_window">Закрыть окно</string>
    <string name="change_number_error_content">Не удалось добавить номер телефона по указаному ИИН. Попробуйте снова либо обратитесь в службу поддержки.</string>
    <string name="main">Главная</string>
    <string name="trips">Поездки</string>
    <string name="search">Поиск</string>
    <string name="help">Помощь</string>
    <string name="profile">Профиль</string>
    <string name="see_all_notifications">Смотреть все уведомления</string>
    <string name="you_do_not_have_notifications">У Вас пока нет новых уведомлений</string>
    <string name="help_24_7">Помощь 24/7</string>
    <string name="nearest_trip">Ближайшая поездка</string>
    <string name="to_support">в поддержку</string>
    <string name="write">Написать</string>
    <string name="to_online_chat">в онлайн-чат</string>
    <string name="read">Прочитать</string>
    <string name="questions_answers">вопрос/ответ</string>
    <string name="download_successful_restart_in_5_seconds">Перезапуск приложения через 5 секунд</string>
    <string name="in_app_update_error_result_code">Ошибка обновления! Код результата: %1$d</string>
    <string name="internet_connection_is_off">Отсутствует подключение к сети</string>
    <string name="monday">Пн</string>
    <string name="tuesday">Вт</string>
    <string name="wednesday">Ср</string>
    <string name="thursday">Чт</string>
    <string name="friday">Пт</string>
    <string name="saturday">Сб</string>
    <string name="sunday">Вс</string>
    <string name="day_of_week_placeholder" translatable="false">Пятница</string>
    <string name="day_of_month_placeholder" translatable="false">25</string>
    <string name="month_placeholder" translatable="false">Ноября</string>
    <string name="you_dont_have_whatsapp">У Вас не установлен WhatsApp !</string>
    <string name="you_dont_have_telegram">У Вас не установлен Telegram !</string>
    <string name="you_are_unauthorized">Вы не авторизованы !</string>
    <string name="voucher_balance_single_line">Остаток по ваучеру</string>
    <string name="my_voucher">Мой ваучер</string>
    <string name="your_voucher_is_not_opened">Ваш ваучер еще не открыт</string>
    <string name="voucher_balance">Остаток\nпо ваучеру</string>
    <string name="zero_balance" translatable="false">0 ₸</string>
    <string name="spent">Потрачено</string>
    <string name="update_date_will_be_shown_after_opening">Дата обновления ваучера отобразится после его открытия</string>
    <string name="operation">Операция</string>
    <string name="history">История</string>
    <string name="date">Дата</string>
    <string name="sum">Сумма</string>
    <string name="no_purchase_by_voucher">У Вас еще не было ни одной покупки по ваучеру. После проведения оплаты ваучером, транзакции отобразятся здесь.</string>
    <string name="debt">Задолженность</string>
    <string name="current_debt">Текущая\nзадолженность</string>
    <string name="no_purchase_by_debt">У Вас еще не было ни одной покупки в долг. После проведения такой покупки, транзакции отобразятся здесь.</string>
    <string name="operation_and_date">Операция и Дата</string>
    <string name="active_trips">Активные поездки</string>
    <string name="archive_trips">Архив поездок</string>
    <string name="my_trips">Мои поездки</string>
    <string name="tickets_are_not_purchased">Билеты еще не куплены !</string>
    <string name="all_info_will_be_shown_after_purchasing">Когда координатор закупит и оформит билеты на данную поездку, отобразится вся необходимая информация.</string>
    <string name="close">Закрыть</string>
    <string name="departure">Отправление</string>
    <string name="destination">Назначение</string>
    <string name="shift">Смена</string>
    <string name="trip_status">Статус поездки</string>
    <string name="dash_sign_btw_two_text" translatable="false">%1$s - %2$s</string>
    <string name="to_work">На вахту, %1$s</string>
    <string name="to_home">Домой, %1$s</string>
    <string name="trip">Поездка, %1$s</string>
    <string name="extra_application">Экстренная заявка. </string>
    <string name="empty_active_trips_title">Нет активных поездок</string>
    <string name="empty_active_trips_content">Новые поездки отобразяться здесь когда они будут назначены</string>
    <string name="empty_archive_trips_title">У Вас пока нет поездок</string>
    <string name="empty_archive_trips_content">Здесь будет отображаться история Ваших поездок</string>
    <string name="opened_without_details_desc">Маршрут не известен, билеты еще не оформлены.</string>
    <string name="opened_with_details_desc">Билеты еще не оформлены.</string>
    <string name="opened_on_the_waiting_list_desc">Поездка находится в листе ожидания. Тайм-лимит оформления: до %1$s.</string>
    <string name="returned_fully_desc">Поездка была отменена, по причине: %1$s.</string>
    <string name="returned_fully_one_segment_desc">Поездка была отменена, по причине: %1$s. Дата отмены: %2$s.</string>
    <string name="opened_more_than_one_segment">Часть билетов еще не оформлена.</string>
    <string name="on_the_waiting_list_more_than_one_segment">Часть билетов находится в листе ожидания. Тайм-лимит оформления: до %1$s.</string>
    <string name="returned_more_than_one_segment">Часть билетов была отменена по причине: %1$s.</string>
    <string name="issued_more_than_one_segment">Часть билетов оформлена.</string>
    <string name="issued_partly">Поездка оформлена частично.</string>
    <string name="application_id">Заявка №%1$s</string>
    <string name="total_time_in_way">%1$s. %2$d ч %3$d мин в пути"</string>
    <string name="in_way">в пути</string>
    <string name="in_way_time">%1$d ч %2$d мин</string>
    <string name="in_way_time_placeholder" translatable="false">5 ч 20 мин</string>
    <string name="train">поезд</string>
    <string name="cancel_2">Отменить</string>
    <string name="name">Имя</string>
    <string name="name_placeholder" translatable="false">Руслан</string>
    <string name="surname">Фамилия</string>
    <string name="surname_placeholder" translatable="false">Баталгазиев</string>
    <string name="father_name">Отчество</string>
    <string name="father_name_placeholder" translatable="false">Владимирович</string>
    <string name="date_of_birth">Дата рождения</string>
    <string name="date_of_birth_placeholder" translatable="false">11.09.1992</string>
    <string name="save">Сохранить</string>
    <string name="citizenship_default_document_changes">Внимание! При смене гражданства измениться документ по умолчанию</string>
    <string name="choose_default_document">Обязательно проверьте данные в разделе «Документы» и выберите верный документ по умолчанию.</string>
    <string name="id">Удостоверение личности</string>
    <string name="iin_value" translatable="false">9202024300975</string>
    <string name="issue_date">Дата выдачи</string>
    <string name="expire_date">Срок действия</string>
    <string name="issue_date_placeholder" translatable="false">11.09.2017</string>
    <string name="issue_authority">Орган выдачи</string>
    <string name="document_number">№ документа</string>
    <string name="document_number_placeholder" translatable="false">042080568</string>
    <string name="issue_authority_placeholder" translatable="false">МВД РК</string>
    <string name="be_careful_when_filling_data">Будьте внимательны, при заполнении. Данные должны соответсвовать документу.</string>
</resources>