<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="document"
            type="kz.divtech.odyssey.rotation.domain.model.profile.documents.Document" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical">
        <TextView
            style="@style/keyTextStyle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/document_number" />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@={document.number}"
            android:backgroundTint="@color/bottom_sheet_line"
            style="@style/uneditable_text"
            android:inputType="number"
            tools:text="@string/document_number_placeholder"/>

        <TextView
            style="@style/keyTextStyle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/issue_date" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/passportIssueDateET"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="4dp"
            app:issueDate="@{document.issue_date}"
            style="@style/uneditable_text"
            android:focusable="false"
            android:background="@drawable/bg_grey_date_edit_text"
            tools:text="@string/issue_date_placeholder" />

        <TextView
            style="@style/keyTextStyle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/expire_date" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/passportExpireDateET"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="4dp"
            app:issueDate="@{document.expire_date}"
            style="@style/uneditable_text"
            android:focusable="false"
            android:background="@drawable/bg_grey_date_edit_text"
            tools:text="@string/issue_date_placeholder" />

        <TextView
            style="@style/keyTextStyle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/issue_authority" />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@={document.issue_by}"
            android:backgroundTint="@color/bottom_sheet_line"
            style="@style/uneditable_text"
            tools:text="@string/issue_authority_placeholder"/>

    </LinearLayout>
</layout>