<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="documentDialog"
            type="kz.divtech.odyssey.rotation.ui.profile.documents.document.DocumentDialog" />
        <variable
            name="profile"
            type="kz.divtech.odyssey.shared.domain.model.profile.Profile" />
        <variable
            name="document"
            type="kz.divtech.odyssey.shared.domain.model.profile.Document" />
        <variable
            name="viewModel"
            type="kz.divtech.odyssey.rotation.ui.profile.documents.document.DocumentViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_bottom_sheet_dialog">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:clipToPadding="false"
                android:paddingStart="@dimen/margin"
                android:paddingTop="@dimen/two_times_margin"
                android:paddingEnd="@dimen/margin"
                android:paddingBottom="24dp">

                <TextView
                    style="@style/mainTitleTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/id" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:fontFamily="@font/pt_root_ui_medium"
                    android:letterSpacing="0.01"
                    android:lineSpacingExtra="7sp"
                    android:text="@string/be_careful_when_filling_data"
                    android:textColor="@color/bottom_sheet_content"
                    android:textSize="15sp" />

                <TextView
                    style="@style/keyTextStyle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/name" />

                <androidx.appcompat.widget.AppCompatEditText
                    style="@style/uneditable_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:backgroundTint="@color/bottom_sheet_line"
                    android:text="@{profile.firstName}"
                    tools:text="@string/name_placeholder" />


                <TextView
                    style="@style/keyTextStyle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/surname" />

                <androidx.appcompat.widget.AppCompatEditText
                    style="@style/uneditable_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:backgroundTint="@color/bottom_sheet_line"
                    android:text="@{profile.lastName}"
                    tools:text="@string/surname_placeholder" />

                <TextView
                    style="@style/keyTextStyle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/father_name" />

                <androidx.appcompat.widget.AppCompatEditText
                    style="@style/uneditable_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:backgroundTint="@color/bottom_sheet_line"
                    android:text="@{profile.patronymic}"
                    tools:text="@string/father_name_placeholder" />

                <TextView
                    style="@style/keyTextStyle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/date_of_birth" />

                <androidx.appcompat.widget.AppCompatEditText
                    style="@style/uneditable_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:backgroundTint="@color/bottom_sheet_line"
                    app:birthDate="@{profile.birthDate}"
                    tools:text="@string/date_of_birth_placeholder" />


                <TextView
                    style="@style/keyTextStyle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/iin" />

                <androidx.appcompat.widget.AppCompatEditText
                    style="@style/uneditable_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:backgroundTint="@color/bottom_sheet_line"
                    android:text="@{profile.iin}"
                    tools:text="@string/iin_value" />

                <include
                    android:id="@+id/documentLayout"
                    layout="@layout/layout_document"
                    app:document="@{document}" />

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/buttonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginTop="@dimen/margin"
                    android:stateListAnimator="@null"
                    android:onClick="@{() -> documentDialog.updateDocument(document)}"
                    android:text="@string/save" />


            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_close_filled_circle"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="14dp"
                android:layout_gravity="top|end"
                android:onClick="@{() -> documentDialog.close() }" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="@{viewModel.PBarVisibility}" />

        </FrameLayout>
    </androidx.core.widget.NestedScrollView>
</layout>