<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingTop="@dimen/two_times_margin"
        android:paddingBottom="24dp"
        android:background="@drawable/bg_dialog">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pt_root_ui_bold"
            android:textSize="19sp"
            android:textColor="#07213d"
            android:lineSpacingExtra="5sp"
            android:gravity="center_horizontal"
            android:text="@string/citizenship_default_document_changes"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pt_root_ui_medium"
            android:textSize="16sp"
            android:layout_marginTop="@dimen/margin"
            android:textColor="#07213d"
            android:lineSpacingExtra="8sp"
            android:gravity="center_horizontal"
            android:text="@string/choose_default_document"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saveBtn"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:stateListAnimator="@null"
            android:textSize="16sp"
            android:layout_marginTop="24dp"
            android:text="@string/save" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancelBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pt_root_ui_bold"
            android:textSize="16sp"
            android:textColor="#07213d"
            android:lineSpacingExtra="2sp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_refund_button"
            android:stateListAnimator="@null"
            android:textAllCaps="false"
            android:text="@string/cancel_2" />

    </LinearLayout>
</layout>